--- a/index.html
+++ b/index.html
@@ -17,17 +17,38 @@
     </div>
     <script>
         $('#fetchButton').click(function() {
-            const pokemonId = 1;
             $.ajax({
                 url: `https://pokeapi.co/api/v2/pokemon/${pokemonId}/`,
                 dataType: `json`,
                 success: function(data) {
-                    console.log(data);
-                    $('#pokemonName').text(data.name);
+                    // ポケモンの名前
+                    $.ajax({
+                        url:data.species.url,
+                        dataType: 'json',
+                        success: function(nameData){
+                            const pokemonName = nameData.names.find(name => name.language.name === 'ja').name;
+                            $('#pokemonName').text(pokemonName);
+                        }
+                    })
+                    // ポケモンの画像
                     $('#pokemonImage').attr('src', data.sprites.front_default);
-                    const types = data.types.map(type => type.type.name).join(', ');
-                    $('#pokemonTypes').text(`タイプ : ${types}`);
-                    $('#pokemonWeight').text(`重さ : ${data.weight / 10} kg`);
+
+                    // ポケモンの種類
+                    const typesPromises = data.types.map(type => $.ajax({
+                        url: type.type.url,
+                        dataType: 'json'
+                    }));
+
+                    Promise.all(typesPromises).then(typeDataObj => {
+                        console.log(typeDataObj);
+                        const typesCsv = typeDataObj.map(typeData => {
+                            const typeName = typeData.names.find(name => name.language.name === 'ja');
+                            return typeName ? typeName.name : '不明';
+                        }).join(', ');
+                        $('#pokemonTypes').text(`タイプ: ${typesCsv}`);
+                    });
+                    // ポケモンの重さ
+                    $('#pokemonWeight').text(`重さ: ${data.weight / 10} kg`);
 
                 },
                 error: function() {
