--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <script>
         $('#fetchButton').click(function() {
+            const pokemonId = Math.floor((Math.random() * 898)) + 1;
             $.ajax({
                 url: `https://pokeapi.co/api/v2/pokemon/${pokemonId}/`,
                 dataType: `json`,
